--- a/code/Tourism/Telecom.TourismControllers/Telecom.TourismControllers.csproj
+++ b/code/Tourism/Telecom.TourismControllers/Telecom.TourismControllers.csproj
@@ -111,8 +111,11 @@
     <Compile Include="App_Start\GlobalRegisterAreas.cs" />
     <Compile Include="App_Start\GlobalRegisterFilters.cs" />
     <Compile Include="App_Start\GlobalRegisterRouteConfig.cs" />
+    <Compile Include="Controllers\ErrorPageController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="CustomnAttributes\CustomExceptionAttribute.cs" />
+    <Compile Include="CustomnAttributes\CustActionFilterAttribute.cs" />
+    <Compile Include="CustomnAttributes\CustomExceptionHandler.cs" />
+    <Compile Include="CustomnAttributes\NoActionFilterAttribute.cs" />
     <Compile Include="Models\AuthenApi.cs" />
     <Compile Include="Models\Configs.cs" />
     <Compile Include="Models\ExcHandler\ExHandler.cs" />
