--- a/code/Tourism/Telecom.TourismUI/Web.config
+++ b/code/Tourism/Telecom.TourismUI/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ApiAuthenUri" value="http://localhost:49287/"/>
     <add key="appKey" value="ee13f936f8f94fbeb739739d937f5d70" />
     <add key="AppSecrect" value="0cf1b2b809262d5ce98ecc40e4cdb88a" />
   </appSettings>
