--- a/code/Tourism/DinJonYa.Aop/Web.config
+++ b/code/Tourism/DinJonYa.Aop/Web.config
@@ -14,6 +14,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AutomaticMigration" value="true"/>
+    <add key="ApiAuthenUri" value="http://localhost:49287/"/>
   </appSettings>
   <connectionStrings>
     <add name="DinJonYaAopEntities" connectionString="server=127.0.0.1;port=3306;database=db_DinJonYa_Aop;user id=root;password=action;charset=utf8;Allow Zero Datetime=True;Integrated Security=true;" providerName="MySql.Data.MySqlClient" />
