--- a/code/Tourism/Telecom.TourismWebApi/Web.config
+++ b/code/Tourism/Telecom.TourismWebApi/Web.config
@@ -9,6 +9,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ApiAuthenUri" value="http://localhost:49287/"/>
+    <add key="appKey" value="fdeac3e0254b7bac63d771054eb18e0e" />
+    <add key="AppSecrect" value="eaacebc343866cc13217d733b2b23c33" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
