--- a/code/Tourism/Tourism.ApiAuthen/Tourism.ApiAuthen.csproj
+++ b/code/Tourism/Tourism.ApiAuthen/Tourism.ApiAuthen.csproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="CustomnAttributes\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiControllers\SysConfigController.cs" />
@@ -190,13 +191,11 @@
     </Compile>
     <Compile Include="Models\Bussiness\AuthenBussiness.cs" />
     <Compile Include="Models\Configs.cs" />
-    <Compile Include="Models\CustomAuthticationFilter.cs" />
     <Compile Include="Models\DBModels\ContextHelper.cs" />
     <Compile Include="Models\DBModels\DbModel_ApiUsers.cs" />
     <Compile Include="Models\DBModels\DbModel_ApiUserIps.cs" />
     <Compile Include="Models\DBModels\SampleData.cs" />
     <Compile Include="Models\DBModels\TourismApiAuthenEntities.cs" />
-    <Compile Include="Models\NoAuthentication.cs" />
     <Compile Include="Models\Services\AuthenServices.cs" />
     <Compile Include="Models\SysWebApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -300,7 +299,6 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties Models_4config_1json__JSONSchema="" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
