--- a/code/Tourism/DinJonYa.Aop/DinJonYa.Aop.csproj
+++ b/code/Tourism/DinJonYa.Aop/DinJonYa.Aop.csproj
@@ -196,6 +196,9 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AopHomeController.cs" />
     <Compile Include="ApiControllers\MQController.cs" />
+    <Compile Include="CustomnAttributes\CustActionFilterAttribute.cs" />
+    <Compile Include="CustomnAttributes\CustomExceptionHandler.cs" />
+    <Compile Include="CustomnAttributes\NoActionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -203,6 +206,7 @@
     <Compile Include="Models\DBModels\DbModel_SensitiveWords.cs" />
     <Compile Include="Models\DBModels\SampleData.cs" />
     <Compile Include="Models\DBModels\DinJonYaAopEntities.cs" />
+    <Compile Include="Models\ExcHandler\ExHandler.cs" />
     <Compile Include="Models\IP\IPScanner.cs" />
     <Compile Include="Models\LogHelper\Log4netHelp.cs" />
     <Compile Include="Models\MQ\AbstractOrderProcessMessage.cs" />
@@ -210,6 +214,7 @@
     <Compile Include="Models\MQ\OrderProcessMessage\IProcessMessage.cs" />
     <Compile Include="Models\MQ\OrderProcessMessage\LogOrderProcessMessage.cs" />
     <Compile Include="Models\MQ\Subscription\BusBuilder.cs" />
+    <Compile Include="Models\SysWebApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -242,7 +247,6 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="log4net.config" />
     <Content Include="Content\IPData\qqwry.dat" />
-    <Content Include="Models\config.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
