--- a/code/Tourism/Telecom.TourismWebApi/Telecom.TourismWebApi.csproj
+++ b/code/Tourism/Telecom.TourismWebApi/Telecom.TourismWebApi.csproj
@@ -164,11 +164,14 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\WebApiHomeController.cs" />
     <Compile Include="ApiControllers\ValuesController.cs" />
+    <Compile Include="CustomnAttributes\CustActionFilterAttribute.cs" />
+    <Compile Include="CustomnAttributes\CustomExceptionFilterAttribute.cs" />
+    <Compile Include="CustomnAttributes\CustomExceptionHandler.cs" />
+    <Compile Include="CustomnAttributes\NoActionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\SysWebApi.cs" />
-    <Compile Include="Models\CustomAuthticationFilter.cs" />
     <Compile Include="Models\ExcHandler\ExHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -200,7 +203,6 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
-    <Content Include="Models\config.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
